fixed button placement and text overflow

--- a/Web-Test/style.css
+++ b/Web-Test/style.css
@@ -1,34 +1,42 @@
 body {
-  overflow-y: hidden;
+	overflow-y: hidden;
+	overflow-x: hidden;
+}
+h1 {
+	color: white;
 }
 img {
-  margin: 0 25%;
-  width: 50%;
-  height: 100vh;
-  object-fit: fill;
+	height: 98vh;
+	object-fit: fill;
 }
-.center {
-  position: absolute;
-  left: 27%;
-  top: 0;
-  width: 47.5%;
-  height: 100vh;
-  overflow-y: scroll;
+#content {
+	position: relative;
+}
+#pages{
+	position: absolute;
+	left: 1em;
+	top: 0;
+	z-index: 1;
+	height: 98vh;
+	overflow-y: scroll;
 }
 p {
-  color: white;
-  font-size: 1.5em;
+    color: white;
+    font-size: 1.5em;
 }
 button {
-  margin: auto .5em;
-  height: 3em;
+    margin: auto .5em;
+    height: 3em;
 }
-#navTabs {
-  position: absolute;
-  right: 10.9%;
-  top: 24.6%;
-  
-  transform: rotate(90deg);
+#flex-container {
+    display: flex;
+    width: 125%;
+    justify-content: center;
+}
+#nav-tabs {
+    transform-origin: top left;
+    transform: rotate(90deg) translate(-.4em, -2.5em);
+    
 }
 #about {
     display: none;
